<!-- 登陆页面 -->
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_sv_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_background"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- logo展示区 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/splash_appname"
                android:textColor="@color/baseColor_blue"
                android:textSize="30sp" />
        </LinearLayout>

        <!-- 标语区 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcom"
            android:textColor="@color/baseColor_blue"
            android:textSize="18sp" />

        <!-- 主题内容区 表单信息区 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:padding="20dp" >

            <!-- 邮箱 -->

            <EditText
                android:gravity="center_vertical"
                android:id="@+id/login_et_email"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_normal"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/login_user"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <!-- 密码 -->

            <EditText
                android:gravity="center_vertical"
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_normal"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/login_key"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/passwordTip"
                android:textColor="#50000000"
                android:textSize="14sp" />

            <!-- 登陆按钮 -->

            <Button
                android:id="@+id/login_bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_bg"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- 注册 -->
        <LinearLayout
            android:id="@+id/login_ll_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="没有账号？"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="立即注册 >"
                android:textColor="@color/baseColor_blue"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>